# dmitryb21-project-portfolio

./: README.md
AI_Projects/: README.md
AI_Projects/neuro_doc_assistant/: .env.example  .gitignore  (+10 more)
AI_Projects/neuro_video_copywriter/backend/: Dockerfile  Dockerfile.fast  __init__.py  alembic.ini  app.py  config.py  pyproject-fast.toml  pyproject.toml
AI_Projects/neuro_video_copywriter/backend/database/: __init__.py  base.py  models.py  session.py
AI_Projects/neuro_video_copywriter/backend/migrations/: README.md  env.py  script.py.mako
AI_Projects/neuro_video_copywriter/backend/migrations/versions/: 20251117_add_audio_path_to_videos.py
AI_Projects/neuro_video_copywriter/backend/models/: __init__.py  schema.py
AI_Projects/neuro_video_copywriter/backend/repositories/: __init__.py  base.py  processing_job_repository.py  summary_repository.py  transcript_repository.py  video_repository.py
AI_Projects/neuro_video_copywriter/backend/services/: __init__.py  audio_chunker.py  audio_extractor.py  consultant_agent.py  embedding_service.py  summary_generator.py  transcript_indexer.py  transcription_api.py  transcription_local.py  video_downloader.py
AI_Projects/neuro_video_copywriter/backend/services/providers/: __init__.py  base.py  rutube.py  vk.py  youtube.py
AI_Projects/neuro_video_copywriter/backend/services/storage/: __init__.py  base.py
AI_Projects/neuro_video_copywriter/backend/services/vector_store/: __init__.py  client.py
AI_Projects/neuro_video_copywriter/backend/tests/: __init__.py
AI_Projects/neuro_video_copywriter/backend/utils/: __init__.py
(+377 files in other folders)
